--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Proyecto-practicas": {
+    "Diagrama": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Proyecto-practicas",
+            "outputPath": "dist/Diagrama",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Proyecto-practicas:build"
+            "browserTarget": "Diagrama:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Proyecto-practicas:build:production"
+              "browserTarget": "Diagrama:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Proyecto-practicas:build"
+            "browserTarget": "Diagrama:build"
           }
         },
         "test": {
@@ -110,19 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Proyecto-practicas:serve"
+            "devServerTarget": "Diagrama:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Proyecto-practicas:serve:production"
+              "devServerTarget": "Diagrama:serve:production"
             }
           }
         }
       }
-    }
-  },
-  "defaultProject": "Proyecto-practicas",
-  "cli": {
-    "analytics": "2f5de4b2-2034-4f59-a969-4ea05cc1b3f5"
-  }
+    }},
+  "defaultProject": "Diagrama"
 }
